--- a/software.html
+++ b/software.html
@@ -39,8 +39,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oOEw8fwQ&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nUjUoMwM'>Guidewire Software, Inc. Careers - Software Engineer, Full-Stack ? Dublin, Ireland</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oU7LafwG&__jvst=Employee+Referral&__jvsd=sIog3hwb&__jvsc=Twitter&bid=nPpWoMwP'>NICE inContact Careers - Sr. Software Engineer (Java)</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oOEw8fwQ&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nUjUoMwM'>Guidewire Software, Inc. Careers - Software Engineer, Full-Stack ? Dublin, Ireland</a></h5> 
+<p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=otSfafwu&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=nWjToMwN'>Gigamon Careers - Principle Software Engineer - Data Storage, ETL and Analytics</a></h5> 
@@ -55,7 +59,7 @@
 <p><span class="badge badge-light">San Francisco, CASan Francisco, CA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KineticaDB/743999698418010-sr-software-engineer-api-development-'>Kinetica DB Sr. Software Engineer (API Development) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KineticaDB/743999698418010-sr-software-engineer-api-development-'>Kinetica DB Sr. Software Engineer (API Development) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -95,7 +99,7 @@
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=ogQvafwv&__jvst=Employee&__jvsd=sg2kciwB&__jvsc=Twitter&bid=nZwPoMwZ'>SugarCRM Careers - Senior UI Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qda9Vfwb&k=Job&j=ogQvafwv&__jvst=Employee&__jvsd=sg2kciwB&__jvsc=Twitter&bid=nZwPoMwZ'>SugarCRM Careers - Senior UI Software Engineer</a></h5> 
 <p><span class="badge badge-light">Cupertino California  North Carolina  Atlanta, Georgia</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -115,7 +119,7 @@
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qE1aVfwu&k=Job&j=olvS9fwB&__jvst=Employee&__jvsd=sntZTgwt&__jvsc=Twitter&bid=neJNoMwp'>WW International (formerly Weight Watchers) Careers - Full Stack Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qE1aVfwu&k=Job&j=olvS9fwB&__jvst=Employee&__jvsd=sntZTgwt&__jvsc=Twitter&bid=neJNoMwp'>WW International (formerly Weight Watchers) Careers - Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -217,11 +221,11 @@
 <p><span class="badge badge-light">Chicago, IL  Chicago</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oaBf8fwS&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nZmAoMwA'>Guidewire Software, Inc. Careers - Senior Software Engineer Front-End - Dublin, Ireland</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oaBf8fwS&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nZmAoMwA'>Guidewire Software, Inc. Careers - Senior Software Engineer Front-End - Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/enova/jobs/1038726?gh_src=be0ded7e1'>Job Application for Software Engineering Manager at Enova International</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/enova/jobs/1038726?gh_src=be0ded7e1'>Job Application for Software Engineering Manager at Enova International</a></h5> 
 <p><span class="badge badge-light">Chicago, IL  Chicago</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -253,7 +257,7 @@
 <p><span class="badge badge-light">Ann Arbor, MI</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/newengen/jobs/4500278002'>Job Application for Software Engineering Project Manager at New Engen</a></h5> 
+<h5><a href='https://boards.greenhouse.io/newengen/jobs/4500278002'>Job Application for Software Engineering Project Manager at New Engen</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -309,11 +313,11 @@
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471431-senior-software-engineer'>SmartRecruiters Inc Senior Software Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471431-senior-software-engineer'>SmartRecruiters Inc Senior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471713-junior-software-engineer'>SmartRecruiters Inc Junior Software Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471713-junior-software-engineer'>SmartRecruiters Inc Junior Software Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -321,7 +325,7 @@
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471356-software-engineer-frontend'>SmartRecruiters Inc Software Engineer, Frontend | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/smartrecruiters/743999698471356-software-engineer-frontend'>SmartRecruiters Inc Software Engineer, Frontend | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Krak?w</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -389,7 +393,7 @@
 <p><span class="badge badge-light">Portland, Oregon  San Francisco, California</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5425'>Software Engineer I - SWD - University Recruiting - TriNet Careers</a></h5> 
+<h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5425'>Software Engineer I - SWD - University Recruiting - TriNet Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -397,7 +401,7 @@
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5427'>Software Engineer I - SWD -University Recruiting - TriNet Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5427'>Software Engineer I - SWD -University Recruiting - TriNet Careers</a></h5> 
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -405,7 +409,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5429'>Software Engineer I - SWD - University Recruiting - TriNet Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://trinetjobs.referrals.selectminds.com/jobs/software-engineer-i-swd-university-recruiting-5429'>Software Engineer I - SWD - University Recruiting - TriNet Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -429,7 +433,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='http://redlatticeinc.applytojob.com/apply/JlnTcxlGzh/Senior-Cyber-Software-Developer'>Senior Cyber Software Developer - REDLattice Inc - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://redlatticeinc.applytojob.com/apply/JlnTcxlGzh/Senior-Cyber-Software-Developer'>Senior Cyber Software Developer - REDLattice Inc - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -439,10 +443,6 @@
 <hr/>
 <h5><a href='https://medtronic.referrals.selectminds.com/jobs/senior-software-engineer-70168'>Senior Software Engineer - Medtronic Careers</a></h5> 
 <p><span class="badge badge-light">United States France Italy Thailand</span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MindPointGroupLLC/743999698281962-software-developer-full-stack'>MindPoint Group, LLC Software Developer, Full Stack | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
 
