--- a/machine.html
+++ b/machine.html
@@ -127,7 +127,7 @@
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/aJ6922LvyL/Software-Engineer-Machine-Learning'>Software Engineer - Machine Learning - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/aJ6922LvyL/Software-Engineer-Machine-Learning'>Software Engineer - Machine Learning - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -156,7 +156,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">Seattle, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/aedit/jobs/4492550002'>Job Application for Machine Learning/Computer Vision Software Engineer at AEDIT</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/aedit/jobs/4492550002'>Job Application for Machine Learning/Computer Vision Software Engineer at AEDIT</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -172,7 +172,7 @@ Deep Learning (Linear, CNN, GRU, LSTM, Attention, Transformer), etc.</p>
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=a504b6c71'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
+<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=a504b6c71'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -215,7 +215,7 @@ the center of our core mission, building state of the art technologies. You will
 reinforcement learning and transfer learning) to real world problems. Provide 
 research?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4477740002?gh_jid=4477740002'>Job Application for Senior Data Scientist, Machine Learning at ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cityblockhealth/jobs/4477740002?gh_jid=4477740002'>Job Application for Senior Data Scientist, Machine Learning at ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 16, 2019 ... We are looking for a Data Scientist, Machine Learning Engineer, or Research 
 Engineer to join the Cityblock Prototype Engineering team. You will work with?...</p>
@@ -234,7 +234,7 @@ Engineer to join the Cityblock Prototype Engineering team. You will work with?..
 Tensorflow, PyTorch, Theano or similar. Experience of analysing clinical/
 healthcare?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4353456002'>Job Application for Machine Learning Engineer at Ocado Group</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/ocadotechnology/jobs/4353456002'>Job Application for Machine Learning Engineer at Ocado Group</a></h5> 
 <p><span class="badge badge-light">Wroclaw</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -268,7 +268,7 @@ healthcare?...</p>
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oS11afwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nKM2iMw7'>Benefitfocus Careers - Machine Learning Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oS11afwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nKM2iMw7'>Benefitfocus Careers - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -364,7 +364,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Indonesia Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999697820294-machine-learning-ml-engineer-authorship-product'>Turnitin, LLC Machine Learning (ML) Engineer- Authorship Product | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TurnitinLLC/743999697820294-machine-learning-ml-engineer-authorship-product'>Turnitin, LLC Machine Learning (ML) Engineer- Authorship Product | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oakland, CA</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -372,7 +372,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Munich</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://corti.recruitee.com/o/senior-machine-learning-researcher'>
+<h5><a href='https://corti.recruitee.com/o/senior-machine-learning-researcher'>
       Senior Machine Learning Researcher - Corti
     </a></h5> 
 <p><span class="badge badge-light">Denmark</span></p>
@@ -386,7 +386,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.csiro.au/job/Brisbane%2C-QLD-Senior-Research-Scientist-Machine-Learning-for-Robotics/594982300/'>Senior Research Scientist - Machine Learning for Robotics</a></h5> 
+<h5><a href='https://jobs.csiro.au/job/Brisbane%2C-QLD-Senior-Research-Scientist-Machine-Learning-for-Robotics/594982300/'>Senior Research Scientist - Machine Learning for Robotics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
@@ -394,7 +394,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Santa Monica</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://careers.xenonstack.com/'>Jobs in Mohali for Big Data, Cloud, Machine Learning - XenonStack</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.xenonstack.com/'>Jobs in Mohali for Big Data, Cloud, Machine Learning - XenonStack</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
@@ -414,7 +414,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light">Sunnyvale  ?  Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/mercycorps/job/oMunbfwy'>Mercy Corps Careers - Consultant  - Software Engineering for Android Flutter App with Firebase ML Kit and Machine Learning Experience - Remote</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/mercycorps/job/oMunbfwy'>Mercy Corps Careers - Consultant  - Software Engineering for Android Flutter App with Firebase ML Kit and Machine Learning Experience - Remote</a></h5> 
 <p><span class="badge badge-light">Lagos, Nigeria</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
